manifest-skeleton/kustomize/app/base/health-ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: app-develop
  labels:
    argocd.argoproj.io/managed-by=openshift-gitops
