manifest-skeleton/kustomize/app/base/${{values.app_name}}-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: health-record
  name: health-record
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: health-record
  type: ClusterIP
