manifest-skeleton/kustomize/app/base/${{values.app_name}}-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: health-record
  name: health-record
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: health-record
    weight: 100
